# bc_labs-assignment

./: .dockerignore  .env.development  Cargo.toml  Dockerfile  docker-compose.yml
src/: global_data.rs  main.rs  request_handler.rs  structure.rs  utility.rs
